// Vitest Snapshot v1

exports[`Component and directive as same name > vue3 transform should work 1`] = `
{
  "code": "/* vite-plugin-uni-components disabled */import __unplugin_directives_0 from 'test/directive/ElInfiniteScroll';
import __unplugin_components_0 from 'test/component/ElInfiniteScroll';

    const render = (_ctx, _cache) => {
      const _component_el_infinite_scroll = __unplugin_components_0
      const _directive_el_infinite_scroll = __unplugin_directives_0
    
      return _withDirectives(
        (_openBlock(),
        _createBlock(_component_test_comp, null, null, 512 /* NEED_PATCH */)),
        [[_directive_loading, 123]]
      )
    }
    ",
}
`;

exports[`transform > vue3 transform should work 1`] = `
{
  "code": "/* vite-plugin-uni-components disabled */import __unplugin_directives_0 from 'test/directive/Loading';
import __unplugin_components_0 from 'test/component/TestComp';

    const render = (_ctx, _cache) => {
      const _component_test_comp = __unplugin_components_0
      const _directive_loading = __unplugin_directives_0
    
      return _withDirectives(
        (_openBlock(),
        _createBlock(_component_test_comp, null, null, 512 /* NEED_PATCH */)),
        [[_directive_loading, 123]]
      )
    }
    ",
}
`;
